# ggml

examples/simple/: CMakeLists.txt  simple-ctx.c
